--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "/node_modules/sweetalert2src/sweetalert2.scss"
             ],
             "styles": [
               "node_modules/@fortawesome/fontawesome-free/css/all.css",
