--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/inter": "^5.0.8",
     "@fontsource/montserrat": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "ag-grid": "^18.1.2",
     "ag-grid-angular": "^30.2.0",
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
