--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ag-grid-community": "^30.2.0",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "json-server": "^0.17.4",
     "primeicons": "^6.0.1",
     "primeng": "^16.4.1",
     "rxjs": "~7.8.0",
